# octopus-api

./: .gitignore  LICENSE  README.md  history.ipynb  influxconnection.py  octopus-cost.py  octopus-monthly.py  octopus-peak.py  octopus-raw.py  octopus-usage.py  pyproject.toml  requirements.txt  setup.py  utilities.py
octopusapi/: __init__.py  api.py  apiconstruct.py  const.py
